Commit 9th January as backup

--- a/_includes/ieeesb/masthead.html
+++ b/_includes/ieeesb/masthead.html
@@ -1,7 +1,7 @@
 
 
 <div class="slides_container">
-	<img src="images/masthead/" width="940" height="270" alt="">
+	<img src="images/masthead/IMG_0009.JPG" width="940" height="270" alt="">
 	<img src="" width="940" height="270" alt="">
 	<img src="" width="940" height="270" alt="">
 	<img src="" width="940" height="270" alt="">
