--- a/assets/themes/twitter/css/uccieee.css
+++ b/assets/themes/twitter/css/uccieee.css
@@ -141,7 +141,7 @@ td {
 
 /* Wrapper */
 .wrapper {
-  width:1100px;
+  width:960px;
 }
 
 
@@ -154,17 +154,17 @@ header {
   width:240px;
 
   float:left;
-  position:fixed;
-	border: 1px solid #000;
-	-webkit-border-top-right-radius: 4px;
-	-webkit-border-bottom-right-radius: 4px;
-	-moz-border-radius-topright: 4px;
-	-moz-border-radius-bottomright: 4px;
-	border-top-right-radius: 4px;
-	border-bottom-right-radius: 4px;
-	padding: 34px 25px 22px 50px;
-	margin: 30px 25px 0 0;
-	-webkit-font-smoothing: antialiased;
+  
+    	border: 1px solid #000;
+    	-webkit-border-top-right-radius: 4px;
+    	-webkit-border-bottom-right-radius: 4px;
+    	-moz-border-radius-topright: 4px;
+    	-moz-border-radius-bottomright: 4px;	
+    	border-top-right-radius: 4px;
+    	border-bottom-right-radius: 4px;
+    	padding: 34px 25px 22px 50px;
+    	margin: 30px 25px 0 0;
+    	-webkit-font-smoothing: antialiased;
 }
 
 p.header {
@@ -269,7 +269,7 @@ section {
 footer {
   width:170px;
   float:left;
-  position:fixed;
+/*  position:fixed;*/
   bottom:10px;
 	padding-left: 50px;
 }
