--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -10,9 +10,10 @@
     <link href="{{ ASSET_PATH }}/bootstrap222/css/bootstrap.css" rel="stylesheet">
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
 
-    <script src="/static/js/slides.min.jquery.js"></script>
-    <script src="/static/js/jquery-1.8.3.min.js"></script>
-
+<script src="js/jquery-1.8.3.min.js"></script>
+<script src="js/jquery.cycle.js"></script>
+<script src="js/jquery.easing.1.3.js"></script>
+<script src="js/slide.js"></script>
     
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -28,17 +29,18 @@
     {% include JB/analytics %}
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header"><a href="{{ HOME_PATH }}">{{ site.title }}</a></h1>
-        <p class="header">{{ site.tagline }}</p>
-        <ul>
-          {% assign pages_list = site.pages %}
-          {% assign group = 'navigation' %}
-          {% include JB/pages_list %}
-        </ul>
-        {% if site.author %}
-        <div class="misc vcard">
+    <div class="container">
+      <div class="span3" >
+        <header>
+          <h1 class="header"><a href="{{ HOME_PATH }}">{{ site.title }}</a></h1>
+          <p class="header">{{ site.tagline }}</p>
+          <ul>
+            {% assign pages_list = site.pages %}
+            {% assign group = 'navigation' %}
+            {% include JB/pages_list %}
+          </ul>
+          {% if site.author %}
+          <div class="misc vcard">
           <ul>
             {% if site.author.email %}
             <li class="contact"><address><span class="fn email"><a href="mailto:ieee@umail.ucc.ie">ieee@umail.ucc.ie</a></span></address></li>
@@ -63,19 +65,27 @@
             {% endif %}
           </ul>
         </div><!-- misc -->
-        {% endif %}
-      </header>
-
-      <section>
-      {{ content }}
-      </section>
-
+            {% endif %}
+        </header>
+        <div class="logos">
+          <a href="http://www.ucc.ie/"><img height="100px" src="images/logos/ucc_logo_simplfied_eee.jpg" style="padding-top:100px;" alt="University College Cork Logo" ></img></a>
+          <a  href="http://www.ieee.org/"><img height="100px" src="images/logos/ieee_mb_blue_eee.jpg" alt="Institute for Electrical and Electronic Engineers"></img></a>
+          <a href="http://www.ucc.ie/en/eleceng/"><img height="100px" src="images/logos/EEE-LOGO2.jpg" style="padding-left:20px;"  alt="UCC Department of Electrical and Electronic Engineering"></img></a>
+        </div>
+      </div>
+      <div class="span10">
+        <section>
+          {{ content }}
+        </section>
+      </div>
+    </div>
+    <div class="container">
       <footer>
-        <img width="300px" src="images/logos/ucc_logo_simplfied_eee.jpg"></img>
-        <img width="300px" src="images/logos/ieee_mb_blue_eee.jpg"></img>
-      <p><small></small></p>
+        
+        <p><small></small></p>
       </footer>
     </div>
+  </div>
     <!--[if !IE]><script>fixScale(document);</script><!--<![endif]-->
   </body>
 </html>
