--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -31,6 +31,14 @@ html, body {
   padding: 20px 20px 10px;
   margin: -20px -20px 20px;
 }
+.main-text {
+	background-color: #f5f5f5;
+  padding: 20px 20px 10px;
+  margin: -20px -20px 20px;
+	
+}
+
+
 
 .topbar .btn {
   border: 0;
