--- a/assets/themes/twitter/css/uccieee.css
+++ b/assets/themes/twitter/css/uccieee.css
@@ -141,9 +141,8 @@ td {
 
 /* Wrapper */
 .wrapper {
-  width:960px;
+  width:1080px;
 }
-
 
 
 /* Header */
@@ -206,6 +205,7 @@ header li {
 	list-style-type: none;
   width:180px;
   height:30px;
+  font-size: 16px;
 	margin-bottom: 12px;
 	line-height: 1.5em;
 	padding: 6px 6px 6px 7px;
@@ -226,7 +226,7 @@ header li {
 	*/
 }
 
-header li:hover {
+/*header li:hover {
 	background: #005B88;
 	background: -moz-linear-gradient(top, #005B88 0%, #004f77 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
@@ -235,7 +235,7 @@ header li:hover {
   background: -ms-linear-gradient(top, #005B88 0%,#004f77 100%);
   background: linear-gradient(top, #005B88 0%,#004f77 100%);
 }
-
+*/
 a.buttons {
 	-webkit-font-smoothing: antialiased;
 	background: url(../images/arrow-down.png) no-repeat;
@@ -263,6 +263,9 @@ section {
   padding-bottom:50px;
 }
 
+.logos {
+  text-align: center;
+}
 
 /* Footer */
 
@@ -274,92 +277,5 @@ footer {
 	padding-left: 50px;
 }
 
-
-@media print, screen and (max-width: 960px) {
-  
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-  
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-
-	footer {
-		border-top: 1px solid #ccc;
-		margin:0 84px 0 50px;
-		padding:0;
-	}
-  
-  header {
-    padding-right:320px;
-  }
-  
-  section {
-    padding:20px 84px 20px 50px;
-    margin:0 0 20px;
-  }
-  
-  header a small {
-    display:inline;
-  }
-  
-  header ul {
-    position:absolute;
-    right:130px;
-    top:84px;
-  }
-}
-
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap:break-word;
-  }
-  
-  header {
-    padding:10px 20px 0;
-		margin-right: 0;
-  }
-
-	section {
-    padding:10px 0 10px 20px;
-    margin:0 0 30px;
-  }
-
-	footer {		
-		margin: 0 0 0 30px;
-	}
-  
-  header ul, header p.view {
-    position:static;
-  }
-}
-
-@media print, screen and (max-width: 480px) {
-  
-  header ul li.download {
-    display:none;
-  }
-
-	footer {		
-		margin: 0 0 0 20px;
-	}
-	
-	footer a{
-		display:block;
-	}
-
-}
-
-@media print {
-  body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
-  }
-}
 
 
