Commit Ready for first publish

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -67,11 +67,6 @@
         </div><!-- misc -->
             {% endif %}
         </header>
-        <div class="logos">
-          <a href="http://www.ucc.ie/"><img height="100px" src="images/logos/ucc_logo_simplfied_eee.jpg" style="padding-top:100px;" alt="University College Cork Logo" ></img></a>
-          <a  href="http://www.ieee.org/"><img height="100px" src="images/logos/ieee_mb_blue_eee.jpg" alt="Institute for Electrical and Electronic Engineers"></img></a>
-          <a href="http://www.ucc.ie/en/eleceng/"><img height="100px" src="images/logos/EEE-LOGO2.jpg" style="padding-left:20px;"  alt="UCC Department of Electrical and Electronic Engineering"></img></a>
-        </div>
       </div>
       <div class="span10">
         <section>
@@ -81,8 +76,12 @@
     </div>
     <div class="container">
       <footer>
-        
-        <p><small></small></p>
+        <div class="logos">
+          <a href="http://www.ucc.ie/"><img  width="200px" src="images/logos/ucc_logo_simplfied_eee.jpg"  alt="University College Cork Logo" ></img></a>
+          <a href="http://www.ucc.ie/en/eleceng/"><img  width="75px" src="images/logos/EEE-LOGO2.jpg" style="padding-left:50px; padding-right:50px;"  alt="UCC Department of Electrical and Electronic Engineering"></img></a>
+          <a  href="http://www.ieee.org/"><img  width="200px" src="images/logos/ieee_mb_blue_eee.jpg" alt="Institute for Electrical and Electronic Engineers"></img></a>
+        </div>
+        <p><small>&copy; UCC IEEE Student Branch</small></p>
       </footer>
     </div>
   </div>
