--- a/_includes/sb/banner.html
+++ b/_includes/sb/banner.html
@@ -1,14 +1,14 @@
 
-
-<div class="slideshow">
-		<img style=" max-width: 100%"alt="UCC IEEE Student Branch Group Photo" src="images/banner/UCCIEEE_Launch_0.jpg" width="780" height="333" />
-		<img style="display: none; max-width: 100%" alt="UCC IEEE Student Branch Linux Tutorial"  src="images/banner/Linux_02.jpg" width="780" height="333" />
-		<img style="display: none; max-width: 100%" alt="UCC IEEE Student Branch " src="images/banner/Student_01.jpg" width="780" height="333" />
-		<img style="display: none; max-width: 100%" alt="UCC IEEE Student Branch " src="images/banner/Student_02.jpg" width="780" height="333" />
-		<img style="display: none; max-width: 100%" alt="UCC IEEE Student Branch " src="images/banner/Student_03.jpg" width="780" height="333" />
-		<img style="display: none; max-width: 100%" alt="UCC IEEE Student Branch " src="images/banner/Student_05.jpg" width="780" height="333" />
-		<img style="display: none; max-width: 100%" alt="UCC IEEE Student Branch " src="images/banner/Student_06.jpg" width="780" height="333" />
-		<img style="display: none; max-width: 100%" alt="UCC IEEE Student Branch " src="images/banner/Classroom_L1.jpg" width="780" height="333" />
-		<img style="display: none; max-width: 100%" alt="UCC IEEE Student Branch " src="images/banner/Lecture_L2.jpg" width="780" height="333" />
-		
+<div id="banner">
+  <img id="firstimageid"style="max-width: 100%; width: 640px; height: 333px;"alt="UCC IEEE Student Branch Group Photo" src="images/banner/UCCIEEE_Launch_0.jpg" />
+  <div id="slideshow" class="slideshow">
+    <img alt="UCC IEEE Student Branch Group Photo" src="images/banner/UCCIEEE_Launch_0.jpg"/>
+    <img alt="IEEE Xtreme at UCC" src="images/banner/ucc_ieee_xtreme_2012.jpg"/>
+    <img alt="Linux Tutorial" src="images/banner/Linux_02.jpg" />
+    <img alt="Student at work" src="images/banner/Student_01.jpg"/>
+    <img alt="Student at work" src="images/banner/Student_02.jpg"/>
+    <img alt="Student at work" src="images/banner/Student_03.jpg"/>
+    <img alt="Student at work" src="images/banner/Student_05.jpg"/>
+    <img alt="Student at work" src="images/banner/Student_06.jpg"/>
+  </div>
 </div>
