--- a/assets/themes/twitter/css/uccieee.css
+++ b/assets/themes/twitter/css/uccieee.css
@@ -17,6 +17,21 @@ body {
 	
 }
 
+h1.split{
+  border-bottom: none;
+}
+
+#banner{
+  height: 380px;
+  width: 630px;
+}
+#slideshow img{ 
+  display: none;
+  max-width: 100%;
+  height: 333px;
+  width: 640px;
+}
+
 h1, h2, h3, h4, h5, h6 {
   color:#232323;
   margin:36px 0 10px;
@@ -171,7 +186,7 @@ p.header {
 }
 
 h1.header {
-	font-family: 'Arvo', sans-serif;
+	font-family: 'Verdana', sans-serif;
 	font-size: 32px;
 	font-weight: 300;
 	line-height: 1.3em;
@@ -270,12 +285,15 @@ section {
 /* Footer */
 
 footer {
-  width:170px;
-  float:left;
-  position:fixed;
+  width:680px;
   bottom:10px;
-	padding-left: 50px;
+  padding-left: 380px;
 }
+
+
+
+.slideshow {  }
+.slideshow img {display: none; max-width: 100%;}
 
 
 
