Commit added landing page

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="span3" >
         <header>
-          <h1 class="header"><a href="{{ HOME_PATH }}">{{ site.title }}</a></h1>
+          <h1 class="header"><a href="/sb.html">{{ site.title }}</a></h1>
           <p class="header">{{ site.tagline }}</p>
           <ul>
             {% assign pages_list = site.pages %}
