--- a/assets/themes/twitter/css/uccieee.css
+++ b/assets/themes/twitter/css/uccieee.css
@@ -157,22 +157,22 @@ td {
 /* Header */
 
 header {
-	background-color: #002d44;
-	color: #FDFDFB;
-  width:240px;
-
+  background-color: #002d44;
+  color: #FDFDFB;
+  width:260px;
+  text-align:center;
   float:left;
   position:fixed
-    	border: 1px solid #000;
-    	-webkit-border-top-right-radius: 4px;
-    	-webkit-border-bottom-right-radius: 4px;
-    	-moz-border-radius-topright: 4px;
-    	-moz-border-radius-bottomright: 4px;	
-    	border-top-right-radius: 4px;
-    	border-bottom-right-radius: 4px;
-    	padding: 34px 25px 22px 50px;
-    	margin: 30px 25px 0 0;
-    	-webkit-font-smoothing: antialiased;
+    border: 1px solid #000;
+    -webkit-border-top-right-radius: 8px;
+    -webkit-border-bottom-right-radius: 8px;
+    -moz-border-radius-topright: 8px;
+    -moz-border-radius-bottomright: 8px;	
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    padding: 32px 30px 22px 50px;
+    margin: 30px 25px 0 0;
+    -webkit-font-smoothing: antialiased;
 }
 
 p.header {
@@ -208,19 +208,19 @@ a.name {
 header ul {
   list-style:none;
   padding:0;
+  text-align:center;
 }
 
 header li {
-	list-style-type: none;
-  width:180px;
+  list-style-type: none;
+  width:195px;
   height:30px;
   font-size: 16px;
-	margin-bottom: 12px;
-	line-height: 1.5em;
-	padding: 6px 6px 6px 7px;
-
-	background: #006699;
-	background: -moz-linear-gradient(top, #006699 0%, #08C 100%);
+  margin-bottom: 12px;
+  line-height: 1.5em;
+  padding: 8px 6px 6px 7px;
+  background: #006699;
+  background: -moz-linear-gradient(top, #006699 0%, #08C 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
   background: -webkit-linear-gradient(top, #006699 0%,#08C 100%);
   background: -o-linear-gradient(top, #006699 0%,#08C 100%);
@@ -230,14 +230,14 @@ header li {
 	border-radius:4px;
   border:1px solid #0D0D0D;
 
-/*	-webkit-box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
-	box-shadow: inset 0px 1px 1px 0 rgba(233,2,38, 1);
-	*/
+ -webkit-box-shadow: inset 0px 1px 1px 0 rgba(38,2,233, 1);
+  box-shadow: inset 0px 1px 1px 0 rgba(38,2,233, 1);
+
 }
 
 /*header li:hover {
-	background: #005B88;
-	background: -moz-linear-gradient(top, #005B88 0%, #004f77 100%);
+  background: #005B88;
+  background: -moz-linear-gradient(top, #005B88 0%, #004f77 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
   background: -webkit-linear-gradient(top, #005B88 0%,#004f77 100%);
   background: -o-linear-gradient(top, #005B88 0%,#004f77 100%);
@@ -270,6 +270,10 @@ section {
   width:650px;
   float:right;
   padding-bottom:50px;
+}
+
+.main_content {
+  margin-top: 50px;
 }
 
 .logos {
