--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -81,7 +81,7 @@
           <a href="http://www.ucc.ie/en/eleceng/"><img  width="75px" src="images/logos/EEE-LOGO2.jpg" style="padding-left:50px; padding-right:50px;"  alt="UCC Department of Electrical and Electronic Engineering"></img></a>
           <a  href="http://www.ieee.org/"><img  width="200px" src="images/logos/ieee_mb_blue_eee.jpg" alt="Institute for Electrical and Electronic Engineers"></img></a>
         </div>
-        <p><small><a href="privacy.html">Privacy Policy </a> | <a href="dataprotection.html">Data Protection</a> | <a href="http://www.ucc.ie/aup">Acceptable Use Policy</a> | <a href="mailto:ieee@umail.ucc.ie">ieee@umail.ucc.ie</a></small></p>
+        <p><small><a href="privacy.html">Privacy</a> | <a href="dataprotection.html">Data Protection</a> | <a href="http://www.ucc.ie/aup">Acceptable Use Policy</a> | <a href="mailto:ieee@umail.ucc.ie">ieee@umail.ucc.ie</a></small></p>
         <p><small>Copyright &copy; <script language="javascript">
 var curdate = new Date()
 var year = curdate.getFullYear()
