Added Join IEEE Link

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -63,6 +63,7 @@
             {% if site.author.pinterest %}
             <li class="pinterest"><a href="http://pinterest.com/{{ site.author.pinterest }}" rel="me">pinterest.com/{{ site.author.pinterest }}</a></li>
             {% endif %}
+            <li onclick="location.href='http://www.ieee.org/web/membership/home/index.html';" class="contact"><address><span class="fn email"><a href="http://www.ieee.org/web/membership/home/index.html">Join The IEEE</a></span></address></li>
           </ul>
         </div><!-- misc -->
             {% endif %}
