Changed email address to ieeesb@ue.ucc.ie Added github account link

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -60,7 +60,7 @@
           <div class="misc vcard">
           <ul>
             {% if site.author.email %}
-            <li onclick="location.href='mailto:ieee@umail.ucc.ie';" class="contact"><address><span class="fn email"><a href="mailto:ieee@umail.ucc.ie">ieee@umail.ucc.ie</a></span></address></li>
+            <li onclick="location.href='mailto:ieeesb@ue.uee.ie';" class="contact"><address><span class="fn email"><a href="mailto:ieeesb@ue.uee.ie">ieeesb@ue.ucc.ie</a></span></address></li>
             {% endif %}
             {% if site.author.github %}
             <li onclick="location.href='http://github.com/{{ site.author.github }}/';" class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
@@ -99,7 +99,7 @@
           <a href="http://www.ucc.ie/en/eleceng/"><img  width="75px" src="images/logos/EEE-LOGO2.jpg" style="padding-left:50px; padding-right:50px;"  alt="UCC Department of Electrical and Electronic Engineering"></img></a>
           <a  href="http://www.ieee.org/"><img  width="200px" src="images/logos/ieee_mb_blue_eee.jpg" alt="Institute for Electrical and Electronic Engineers"></img></a>
         </div>
-        <p><small><a href="privacy.html">Privacy</a> | <a href="dataprotection.html">Data Protection</a> | <a href="http://www.ucc.ie/aup">Acceptable Use Policy</a> | <a href="mailto:ieee@umail.ucc.ie">ieee@umail.ucc.ie</a></small></p>
+        <p><small><a href="privacy.html">Privacy</a> | <a href="dataprotection.html">Data Protection</a> | <a href="http://www.ucc.ie/aup">Acceptable Use Policy</a> | <a href="mailto:ieeesb@ue.ucc.ie">ieeesb@ue.ucc.ie</a></small></p>
         <p><small>Copyright &copy; <script language="javascript">
 var curdate = new Date()
 var year = curdate.getFullYear()
